(MAJOR FIX): Fixed Password generation on input on mobile

--- a/src/components/strenghtIndicator/style.css
+++ b/src/components/strenghtIndicator/style.css
@@ -23,7 +23,7 @@
 
 @media only screen and (max-width: 600px) {
     .indicator-heading {
-        font-size: 14px;
+        font-size: 12px;
     }
     .strenght-text {
         font-size: 18px;
